# scraper-housing

./: .gitignore  README.md  config.cfg  main.py  process.ipynb  profiling_output.prof  pyproject.toml  requirements.txt  sample.ipynb  scraper.py  target_housing_main.py  test.py
configs/: target_housing_config.json
etl/: target_housing_main.py
funda_scraper/: preprocess.py  scrape.py
funda_scraper/config/: config.py
funda_scraper/secrets/: cookies.pkl
funda_scraper/tests/: test_scrape.py
housing_scraper/: helper.py  housing.py  logger.py  scraper.py  website.py
nb/: cookies.pkl  etl.py  funda_website.ipynb  main.py  map_api.ipynb  scraper.ipynb  scraper.py  viz.ipynb
src/ns_api/: npi_res.py
