[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "housing_scraper"
version = "0.1.0"
description = "Housing Scraper with NS API package"
authors = [
    {name = "Phat Le", email = "phat@example.com"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["housing_scraper", "ns_api", "funda_scraper"]
namespaces = false
